--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     color: rgb(48, 48, 48);
     font-family: sans-serif;
     line-height: 1.5;
+    box-sizing: border-box;
 }
 
 #container {
@@ -15,13 +16,12 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    flex-basis: 300px;
     flex-grow: 0;
-    height: 100vh;
     overflow: auto;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
+    background-color: white;
+    width: 100vw;
+    height: 300px;
+    border-bottom: 1px solid black;
 }
 
 #navbar a {
@@ -38,12 +38,28 @@ body {
     position: sticky;
     top: 0;
     background-color: white;
+    border-bottom: 1px solid black;
 }
 
 #main-doc {
     flex-grow: 1;
     flex-basis: 500px;
     margin: 20px;
+    flex-shrink: 1;
+    min-width: 0;
+}
+
+@media (min-width: 800px) {
+    #container {
+        flex-wrap: nowrap;
+    }
+    #navbar {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0px;
+        flex-basis: 300px;
+        height: 100vh;
+    }
 }
 
 header {
