--- a/style.css
+++ b/style.css
@@ -74,9 +74,10 @@ header {
     padding-left: 60px;
 }
 
-.main-section pre {
-    padding: 0 20px;
+.main-section code {
+    padding: 10px;
     margin: 10px 50px;
     background-color: rgb(245, 245, 245);
     white-space: pre;
+    display: block;
 }
